testcases/error/invalid_enum_variant.veryl
module invalid_enum_variant {
    #[enum_encoding(onehot)]
    enum EnumA {
        A = 0,
    }
}
